--- a/index.html
+++ b/index.html
@@ -6,18 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Component Library</title>
     
-    <!-- css way1:styele tag
-        <style>
-        body{
-            color:red;
-        }
-    </style> -->
-
-    <!-- Third way of doing css:external -->
     <link href="styles.css" rel="stylesheet"/>
 </head>
 <body>
-    <h1 id="lib-header"> Manjula's componet library</h1>
+    <h1> Manjula's componet library</h1>
     <p> I am attending neog.camp and I want to make a library which would make all my projects look good and consistent</p>
 
     <hr>
@@ -25,7 +17,8 @@
     <h2>@typography</h2>
     <h1>This is the biggest heading</h1>
     <h2>This is the second biggest</h2>
-    <p class="para">Let me shou you normal text. This is free flowing and will warp at the end like a paragraph</p>
+    <p>Let me shou you normal text. This is free flowing and will warp at the end like a paragraph</p>
+    <p>This paragraph will have a <strong>bold</strong> text</p>
     <small>This is relatively smaller text</small>
 
     <hr>
@@ -33,7 +26,7 @@
     <h2>@container</h2>
 
      <h3>fluid container</h3>
-    <div class="para">This is a fluid container and it will go till the end of the page</div>
+    <div>This is a fluid container and it will go till the end of the page</div>
 
     <h3>center container</h3>
     <div>This is a centered container and it will go till the end of the specified width</div>
