--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
 
     <h2>@links</h2>
 
-    <a href="/">Primary Link</a>
-    <a href="/">Secondary Link</a>
+    <a class="link link-primary"
+    href="/">Primary Link</a>
+    <a "link link-secondary"
+    "href="/">Secondary Link</a>
 
     <hr>
     <h2>@lists</h2>
