--- a/index.html
+++ b/index.html
@@ -44,23 +44,24 @@
     <hr>
     <h2>@lists</h2>
     <h3>unorderd list</h3>
-    <ul>
+    <p>This list will not have the bullets</p>
+    <ul class="list-non-bullet">
         <li>Item one</li>
         <li>Iteam two</li>
         <li>Iteam three</li>
 
     </ul>
 
-    <ul>
-        <li>Inline Iteam one</li>
-        <li>Inline Iteam Two</li>
-        <li>Inline iteam three</li>
+    <ul class="list-non-bullet" >
+        <li class="list-iteam-inline">Inline Iteam one</li>
+        <li class="list-iteam-inline">Inline Iteam Two</li>
+        <li class="list-iteam-inline">Inline iteam three</li>
 
     </ul>
 
     <h3>Revered Ordered list</h3>
 
-    <ol>
+    <ol reversed>
         <li>Milk</li>
         <li>Eggs</li>
         <li>breakfast</li>
