--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <link href="styles.css" rel="stylesheet"/>
 </head>
-<body>
+<body>  
     <h1> Manjula's componet library</h1>
     <p> I am attending neog.camp and I want to make a library which would make all my projects look good and consistent</p>
 
@@ -36,10 +36,8 @@
 
     <h2>@links</h2>
 
-    <a class="link link-primary"
-    href="/">Primary Link</a>
-    <a "link link-secondary"
-    "href="/">Secondary Link</a>
+    <a class="link link-primary" href="/">Primary Link</a>
+    <a class="link link-secondary" href="/">Secondary Link</a>
 
     <hr>
     <h2>@lists</h2>
